--- a/LiteTube/App.xaml
+++ b/LiteTube/App.xaml
@@ -36,6 +36,15 @@
             </Style>
         
             <local:LocalizedStrings xmlns:local="clr-namespace:LiteTube" x:Key="LocalizedStrings"/>
+
+            <shell:ApplicationBar x:Key="GlobalAppBar" IsVisible="True" IsMenuEnabled="True">
+                <shell:ApplicationBarIconButton IconUri="/Toolkit.Content/ApplicationBar.Home.png" Text="Home" Click="Home_Click" />
+                <shell:ApplicationBarIconButton IconUri="/Toolkit.Content/ApplicationBar.Find.png" Text="Find" Click="Find_Click" />
+                <!--<shell:ApplicationBar.MenuItems>
+                    <shell:ApplicationBarMenuItem Text="MenuItem 1" Click="MenuItem1_Click" />
+                    <shell:ApplicationBarMenuItem Text="MenuItem 2" Click="MenuItem2_Click" />
+                </shell:ApplicationBar.MenuItems>-->
+            </shell:ApplicationBar>
         </ResourceDictionary>
     </Application.Resources>
 
