--- a/LiteTube/MainPage.xaml
+++ b/LiteTube/MainPage.xaml
@@ -6,8 +6,6 @@
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
-    xmlns:abu="clr-namespace:AppBarUtils;assembly=AppBarUtils"
     xmlns:controls="clr-namespace:LiteTube.Controls"
     mc:Ignorable="d"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
@@ -17,7 +15,8 @@
     Orientation="Portrait"
     shell:SystemTray.IsVisible="True"
     Style="{StaticResource SystemTrayStyle}"
-    Name="page">
+    ApplicationBar = "{StaticResource GlobalAppBar}"
+    Name="Page">
     
     <phone:PhoneApplicationPage.Resources>
         <ResourceDictionary>
@@ -101,14 +100,4 @@
         <!--<Image Source="/Assets/AlignmentGrid.png" VerticalAlignment="Top" Height="800" Width="480" Margin="0" Grid.Row="0" Grid.RowSpan="2" IsHitTestVisible="False" />-->
 
     </Grid>
-    <phone:PhoneApplicationPage.ApplicationBar>
-        <shell:ApplicationBar IsVisible="True" IsMenuEnabled="True">
-            <shell:ApplicationBarIconButton IconUri="/Toolkit.Content/ApplicationBar.Find.png" 
-                                            Text="Find"/>
-        </shell:ApplicationBar>
-    </phone:PhoneApplicationPage.ApplicationBar>
-    <i:Interaction.Behaviors>
-        <abu:AppBarItemCommand Id="Find" Command="{Binding NavigationPanelViewModel.SearchCommand}"/>
-    </i:Interaction.Behaviors>
-
 </phone:PhoneApplicationPage>
