--- a/LiteTube/VideoPage.xaml
+++ b/LiteTube/VideoPage.xaml
@@ -209,9 +209,8 @@
 
     <phone:PhoneApplicationPage.ApplicationBar>
         <shell:ApplicationBar IsVisible="True" IsMenuEnabled="True" Mode="Minimized" x:Name="CommandBar">
-            <shell:ApplicationBarIconButton IconUri="/Toolkit.Content/ApplicationBar.Home.png" 
-                                            Text="Home"
-                                            Click="Home_Click"/>
+            <shell:ApplicationBarIconButton IconUri="/Toolkit.Content/ApplicationBar.Home.png" Text="Home" Click="Home_Click"/>
+            <shell:ApplicationBarIconButton IconUri="/Toolkit.Content/ApplicationBar.Find.png" Text="Find" Click="Find_Click"/>
             <!--<shell:ApplicationBar.MenuItems>
                 <shell:ApplicationBarMenuItem Text="Copy video url" x:Uid="CopyVideoUrl"/>
             </shell:ApplicationBar.MenuItems>-->
