Navigation panel buttons ??????????

--- a/LiteTube/Themes/generic.xaml
+++ b/LiteTube/Themes/generic.xaml
@@ -3,8 +3,20 @@
                     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
                     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone">
 
-    <Style x:Key="SystemTrayStyle" TargetType="phone:PhoneApplicationPage">
-        <Setter Property="shell:SystemTray.BackgroundColor" Value="{StaticResource PhoneChromeColor}" />
-    </Style>
+    <SolidColorBrush x:Key="PhoneDisabledBackgroundBrush" Color="#FFA5A5A5" />
+    <SolidColorBrush x:Key="NavigationPanelBrush" Color="#FF2B2B2B" />
+    <SolidColorBrush x:Key="NavigationPanelForegroundBrush" Color="#FFFFFFFF" />
+    <SolidColorBrush x:Key="NavigationPanelButtonPressedBackgroundBrush" Color="#FF404040" />
+    <SolidColorBrush x:Key="PhoneSecondaryForegroundBrush" Color="#99000000" />
     
+    <Style x:Key="SystemTrayStyle" TargetType="phone:PhoneApplicationPage">
+        <Setter Property="shell:SystemTray.BackgroundColor" Value="#FF2B2B2B" />
+    </Style>
+
+    <Style x:Key="PanoramaItemHeaderTextStyle" TargetType="TextBlock">
+        <Setter Property="FontFamily" Value="{StaticResource PhoneFontFamilySemiLight}"/>
+        <Setter Property="FontSize" Value="{StaticResource PanoramaItemHeaderFontSize}"/>
+        <Setter Property="CharacterSpacing" Value="-35"/>
+    </Style>
+
 </ResourceDictionary>
