--- a/LiteTube/App.xaml
+++ b/LiteTube/App.xaml
@@ -14,6 +14,8 @@
                 <ResourceDictionary Source="Controls/LoadingListView.xaml"/>
                 <ResourceDictionary Source="Themes/Icons.xaml"/>
                 <ResourceDictionary Source="Themes/generic.xaml"/>
+                <ResourceDictionary Source="Themes/Button.xaml"/>
+                <ResourceDictionary Source="Themes/ToggleButton.xaml"/>
             </ResourceDictionary.MergedDictionaries>
 
             <converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" FalseValue="Collapsed" TrueValue="Visible"/>
@@ -25,16 +27,7 @@
             <converters:ObjectToVisibilityConverter x:Key="ObjectToVisibilityConverter"/>
 
             <sys:Double x:Key="PanoramaItemHeaderFontSize">56</sys:Double>
-            
-            <SolidColorBrush x:Key="NavigationPanelBrush" Color="#FF2B2B2B" />
-            <SolidColorBrush x:Key="NavigationPanelForegroundBrush" Color="#FFFFFFFF" />
-            
-            <Style x:Key="PanoramaItemHeaderTextStyle" TargetType="TextBlock">
-                <Setter Property="FontFamily" Value="{StaticResource PhoneFontFamilySemiLight}"/>
-                <Setter Property="FontSize" Value="{StaticResource PanoramaItemHeaderFontSize}"/>
-                <Setter Property="CharacterSpacing" Value="-35"/>
-            </Style>
-        
+
             <local:LocalizedStrings xmlns:local="clr-namespace:LiteTube" x:Key="LocalizedStrings"/>
 
             <shell:ApplicationBar x:Key="GlobalAppBar" IsVisible="True" IsMenuEnabled="True">
