--- a/LiteTube/Controls/NavigationPanel.xaml
+++ b/LiteTube/Controls/NavigationPanel.xaml
@@ -21,7 +21,7 @@
         </ResourceDictionary>
     </UserControl.Resources>
     
-    <Grid x:Name="LayoutRoot" Background="{StaticResource PhoneChromeBrush}">
+    <Grid x:Name="LayoutRoot" Background="{StaticResource NavigationPanelBrush}">
         <Grid.RowDefinitions>
             <RowDefinition Height="55"/>
             <RowDefinition Height="*"/>
@@ -35,7 +35,8 @@
         <ToggleButton Grid.Column="0" 
                       Grid.Row="0"
                       x:Name="MainMenuButton"
-                      ContentTemplate="{StaticResource MenuIcon}"/>
+                      ContentTemplate="{StaticResource MenuIcon}"
+                      Style="{StaticResource NavigationControlToggleButtonStyle}"/>
 
         <TextBlock Text="LiteTube"
                    Grid.Row="0"
@@ -48,6 +49,7 @@
         <ToggleButton Grid.Column="2" 
                       Grid.Row="0"
                       ContentTemplate="{StaticResource LogoutIcon}"
+                      Style="{StaticResource NavigationControlToggleButtonStyle}"
                       IsChecked="{Binding IsProfileChecked, Mode=TwoWay}"
                       x:Name="LoginMenuButton"/>
 
@@ -125,7 +127,8 @@
                            Stretch="Fill"
                            Source="{Binding ProfileImage}"/>
 
-                    <StackPanel Grid.Column="1"
+                    <StackPanel Grid.Row="0" 
+                                Grid.Column="1"
                                 Margin="20,0,0,0"
                                 Orientation="Vertical">
                         <TextBlock Style="{StaticResource PhoneTextNormalStyle}"
@@ -142,6 +145,7 @@
 
                     <Button HorizontalAlignment="Right"
                             Command="{Binding LoginCommand}"
+                            Grid.Row="0" 
                             Grid.Column="2"
                             Width="90"
                             Height="100"
@@ -167,6 +171,7 @@
                     <Button HorizontalAlignment="Right"
                             Command="{Binding LogoutCommand}"
                             Click="LoginButton_Click"
+                            Grid.Row="0" 
                             Grid.Column="2"
                             Width="90"
                             Height="100"
