--- a/LiteTube/MainPage.xaml
+++ b/LiteTube/MainPage.xaml
@@ -14,7 +14,7 @@
     SupportedOrientations="Portrait"  
     Orientation="Portrait"
     shell:SystemTray.IsVisible="True"
-    Style="{StaticResource SystemTrayStyle}"
+    Style="{StaticResource PageThemeStyle}"
     ApplicationBar = "{StaticResource GlobalAppBar}"
     Name="Page">
     
