--- a/LiteTube/SectionPage.xaml
+++ b/LiteTube/SectionPage.xaml
@@ -12,7 +12,7 @@
     SupportedOrientations="Portrait" Orientation="Portrait"
     mc:Ignorable="d"
     shell:SystemTray.IsVisible="True"
-    Style="{StaticResource SystemTrayStyle}"
+    Style="{StaticResource PageThemeStyle}"
     ApplicationBar = "{StaticResource GlobalAppBar}">
 
     <!--LayoutRoot is the root grid where all page content is placed-->
