--- a/LiteTube/App.xaml
+++ b/LiteTube/App.xaml
@@ -28,11 +28,6 @@
             
             <sys:Double x:Key="PanoramaItemHeaderFontSize">56</sys:Double>
 
-            <Color x:Key="PhoneBackgroundColor">#FFF1F0EE</Color>
-            
-            <SolidColorBrush x:Key="PhoneDarkAccentBrush" Color="#FFA5A5A5" />
-            <SolidColorBrush x:Key="PhoneLightAccentBrush" Color="#FFA5A5A5" />
-            
             <local:LocalizedStrings xmlns:local="clr-namespace:LiteTube" x:Key="LocalizedStrings"/>
 
             <shell:ApplicationBar x:Key="GlobalAppBar" IsVisible="True" IsMenuEnabled="True">
@@ -43,6 +38,11 @@
                     <shell:ApplicationBarMenuItem Text="MenuItem 2" Click="MenuItem2_Click" />
                 </shell:ApplicationBar.MenuItems>-->
             </shell:ApplicationBar>
+
+            <Style x:Key="PhoneTextNormalStyle" TargetType="TextBlock" BasedOn="{StaticResource PhoneTextBlockBase}">
+                <Setter Property="Foreground" Value="{StaticResource PhoneMainForegroundBrush}"/>
+            </Style>
+            
         </ResourceDictionary>
     </Application.Resources>
 
