--- a/LiteTube/App.xaml
+++ b/LiteTube/App.xaml
@@ -11,6 +11,7 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Themes/PlayerMobileTheme.xaml"/>
                 <ResourceDictionary Source="Controls/LoadingListView.xaml"/>
                 <ResourceDictionary Source="Themes/Icons.xaml"/>
                 <ResourceDictionary Source="Themes/generic.xaml"/>
