--- a/LiteTube/VideoPage.xaml
+++ b/LiteTube/VideoPage.xaml
@@ -99,6 +99,7 @@
 
                         <!--Info about publisher (channel)-->
                         <Grid Grid.Row="2"
+                              Background="{StaticResource PhoneSecondaryBackgroundBrush}"
                               x:Name="publisherInfo">
 
                             <Grid.ColumnDefinitions>
