--- a/LiteTube/MainPage.xaml
+++ b/LiteTube/MainPage.xaml
@@ -23,6 +23,20 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Themes/ProfileSections.xaml"/>
             </ResourceDictionary.MergedDictionaries>
+
+            <Style x:Key="PanoramaItemHeaderTextStyle" TargetType="TextBlock">
+                <Setter Property="FontFamily" Value="{StaticResource PhoneFontFamilySemiLight}"/>
+                <Setter Property="FontSize" Value="36"/>
+                <Setter Property="Foreground" Value="{StaticResource PhoneSubtleBrush}"/>
+                <Setter Property="CharacterSpacing" Value="-35"/>
+            </Style>
+
+            <DataTemplate x:Key="MiddlePanoramaHeader">
+                <ContentPresenter>
+                    <TextBlock Text="{Binding}" 
+                               Style="{StaticResource PanoramaItemHeaderTextStyle}"/>
+                </ContentPresenter>
+            </DataTemplate>
         </ResourceDictionary>
     </phone:PhoneApplicationPage.Resources>
     
@@ -66,6 +80,7 @@
 
             <!--Panorama item one-->
             <phone:PanoramaItem Header="Activity"
+                                HeaderTemplate="{StaticResource MiddlePanoramaHeader}"
                                 Visibility="{Binding IsAuthorized, Converter={StaticResource BooleanToVisibilityConverter}}">
                 <!--Single line list with text wrapping-->
                 <ContentPresenter Content="{Binding ActivitySectionViewModel}"
