--- a/LiteTube/MainPage.xaml
+++ b/LiteTube/MainPage.xaml
@@ -15,7 +15,6 @@
     Orientation="Portrait"
     shell:SystemTray.IsVisible="True"
     Style="{StaticResource PageThemeStyle}"
-    ApplicationBar = "{StaticResource GlobalAppBar}"
     Name="Page">
     
     <phone:PhoneApplicationPage.Resources>
@@ -115,4 +114,11 @@
         <!--<Image Source="/Assets/AlignmentGrid.png" VerticalAlignment="Top" Height="800" Width="480" Margin="0" Grid.Row="0" Grid.RowSpan="2" IsHitTestVisible="False" />-->
 
     </Grid>
+
+    <phone:PhoneApplicationPage.ApplicationBar>
+        <shell:ApplicationBar IsVisible="True" IsMenuEnabled="True">
+            <shell:ApplicationBarIconButton IconUri="/Toolkit.Content/ApplicationBar.Find.png" Text="Find" Click="Find_Click" />
+        </shell:ApplicationBar>
+    </phone:PhoneApplicationPage.ApplicationBar>
+    
 </phone:PhoneApplicationPage>
