--- a/LiteTube/SearchPage.xaml
+++ b/LiteTube/SearchPage.xaml
@@ -6,6 +6,7 @@
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:controls="clr-namespace:LiteTube.Controls"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
@@ -22,11 +23,11 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
+        
         <!--TitlePanel contains the name of the application and page title-->
-        <StackPanel Grid.Row="0" Margin="12,17,0,28">
-            <TextBlock Text="LiteTube" Style="{StaticResource PhoneTextNormalStyle}"/>
-            <TextBlock Text="Search" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
-        </StackPanel>
+        <controls:NavigationPanel Grid.Row="0" 
+                                  x:Name="NavControl"
+                                  DataContext="{Binding NavigationPanelViewModel}"/>
 
         <Border Grid.Row="1"
                 Background="{StaticResource NavigationPanelBrush}"
