--- a/LiteTube/Controls/LoadingListView.xaml
+++ b/LiteTube/Controls/LoadingListView.xaml
@@ -9,7 +9,7 @@
     xmlns:common="clr-namespace:LiteTube.Common">
 
     <DataTemplate x:Key="CategoryItemTemplate">
-        <Border Width="370"
+        <Border Width="405"
                 Height="100"
                 x:Name="Border"
                 Margin="0,0,0,10"
@@ -20,13 +20,15 @@
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
                 <TextBlock Text="{Binding Title}" 
-                           Grid.Column="0"
-                           TextWrapping="Wrap" 
-                           TextTrimming="WordEllipsis"
-                           MaxHeight="54"
-                           Style="{StaticResource PhoneTextSubtleStyle}"
-                           VerticalAlignment="Center"
-                           Margin="20"/>
+                            Grid.Column="0"
+                            TextWrapping="Wrap" 
+                            TextTrimming="WordEllipsis"
+                            MaxHeight="64"
+                            FontSize="28"
+                            FontWeight="Light"
+                            VerticalAlignment="Center"
+                            Margin="20"
+                            Foreground="{StaticResource PhoneSubtleBrush}"/>
                 <Border Grid.Column="1"
                         Margin="0,0,20,0"
                         Width="55"
@@ -43,7 +45,7 @@
     <DataTemplate x:Key="LoadingListView" >
         <Grid x:Name="ContentRoot">
             <Grid>
-                <toolkit:LongListMultiSelector Margin="0,0,0,0" 
+                <toolkit:LongListMultiSelector Margin="-12,0,0,0" 
                                            ItemsSource="{Binding Items}"
                                            IsSelectionEnabled="False"
                                            EnforceIsSelectionEnabled="False"
@@ -64,39 +66,39 @@
                                 </Grid.ColumnDefinitions>
 
                                 <Grid Grid.Column="0" 
-                                  HorizontalAlignment="Left"
-                                  Background="DimGray"
-                                  Height="100"
-                                  Width="178">
+                                      HorizontalAlignment="Left"
+                                      Background="DimGray"
+                                      Height="100"
+                                      Width="178">
 
                                     <Image Source="{Binding ImagePath}" 
-                                       Stretch="UniformToFill" />
+                                           Stretch="UniformToFill" />
 
                                     <Border Margin="2"
-                                        VerticalAlignment="Bottom"
-                                        HorizontalAlignment="Right"
-                                        Background="Black"
-                                        Padding="4,0,4,0">
+                                            VerticalAlignment="Bottom"
+                                            HorizontalAlignment="Right"
+                                            Background="Black"
+                                            Padding="4,0,4,0">
                                         <TextBlock Text="{Binding Duration, Converter={StaticResource ResourceKey=TimeSpanFormatConverter}}" 
-                                               TextWrapping="NoWrap" 
-                                               Foreground="White"
-                                               FontSize="14"/>
+                                                   TextWrapping="NoWrap" 
+                                                   Foreground="White"
+                                                   FontSize="14"/>
                                     </Border>
                                 </Grid>
 
                                 <StackPanel Grid.Column="1" 
-                                        Margin="0,0,0,0">
+                                            Margin="0,0,0,0">
                                     <TextBlock Text="{Binding Title}" 
-                                           Style="{StaticResource PhoneTextNormalStyle}"
-                                           TextTrimming="WordEllipsis"
-                                           TextWrapping="Wrap"
-                                           MaxHeight="54"/>
+                                               Style="{StaticResource PhoneTextNormalStyle}"
+                                               TextTrimming="WordEllipsis"
+                                               TextWrapping="Wrap"
+                                               MaxHeight="54"/>
                                     <TextBlock Text="{Binding ChannelTitle}" 
-                                           Style="{StaticResource PhoneTextSmallStyle}"
-                                           TextWrapping="NoWrap"/>
+                                               Style="{StaticResource PhoneTextSmallStyle}"
+                                               TextWrapping="NoWrap"/>
                                     <TextBlock TextWrapping="NoWrap"
-                                           Text="{Binding PublishedAt}"
-                                           Style="{StaticResource PhoneTextSmallStyle}">
+                                               Text="{Binding PublishedAt}"
+                                               Style="{StaticResource PhoneTextSmallStyle}">
                                     <Run Text="Published at " x:Uid="PublishedAt"/>
                                     <Run Text="{Binding PublishedAt}" />
                                     </TextBlock>
