--- a/LiteTube/Themes/ProfileSections.xaml
+++ b/LiteTube/Themes/ProfileSections.xaml
@@ -9,15 +9,9 @@
         <ResourceDictionary Source="../Themes/ProfileIcons.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
-    <Style x:Key="SectionTextBlockStyle" TargetType="TextBlock">
-        <Setter Property="FontSize" Value="{StaticResource PhoneFontSizeLarge}"/>
-        <Setter Property="FontWeight" Value="Light"/>
-        <Setter Property="Margin" Value="20,10,10,18"/>
-        <Setter Property="VerticalAlignment" Value="Center" />
-    </Style>
-    
     <DataTemplate x:Key="ProfileSectionsDataTemplate">
-        <ListBox toolkit:TiltEffect.IsTiltEnabled="True">
+        <ListBox toolkit:TiltEffect.IsTiltEnabled="True"
+                 Margin="12,0,0,0">
             <ListBoxItem common:ItemClickCommand.Command="{Binding RecommendedCommand}"
                          Visibility="{Binding IsAuthorized, Converter={StaticResource BooleanToVisibilityConverter}}"
                          Margin="0,0,0,10">
