--- a/LiteTube/Themes/generic.xaml
+++ b/LiteTube/Themes/generic.xaml
@@ -21,4 +21,11 @@
         <Setter Property="Background" Value="{StaticResource PhoneBackgroundBrush}"/>
     </Style>
 
+    <Style x:Key="SectionTextBlockStyle" TargetType="TextBlock">
+        <Setter Property="FontSize" Value="{StaticResource PhoneFontSizeLarge}"/>
+        <Setter Property="FontWeight" Value="Light"/>
+        <Setter Property="Margin" Value="20,10,10,20"/>
+        <Setter Property="VerticalAlignment" Value="Center" />
+    </Style>
+
 </ResourceDictionary>
